# drf-lms

./: .env.sample  Dockerfile  docker-compose.yml  pyproject.toml  readme.md  requirements.txt
config/: settings.py  urls.py
materials/: models.py  pagination.py  serializers.py  tasks.py  tests.py  urls.py  validators.py  views.py
materials/coverage_report/: coverage_report.txt
materials/fixtures/: data.json
materials/migrations/: 0001_initial.py  0002_lesson_course_lesson_link.py  0003_alter_course_img_alter_lesson_img_alter_lesson_link.py  0004_alter_course_img_alter_lesson_img_alter_lesson_link.py  0005_course_owner_lesson_owner.py  0006_subscription.py
users/: models.py  permissions.py  serializers.py  services.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_remove_user_country_remove_user_token_user_town.py  0003_payment.py  0004_alter_payment_options_payment_payment_type.py  0005_alter_payment_payment_type.py  0006_alter_payment_user.py
